# my-hands-on-assets

./: .pre-commit-config.yaml  .prettierrc.yml  ADS-dev-env-template.code-workspace  README.md  postCreateCommand.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release.yml
.github/ISSUE_TEMPLATE/: article.md  debt-repayment.md  survey-template.md  technical-goal.md  technical-survey-template.md
.github/workflows/: api-test.yml  auto-create-pull-request.yml  auto-test-on-pr.yml  backend_deploy.yml  check-branch-on-pr-to-main.yml  create-release-note.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  devcontainer-build.yml  dispatch_backend_deploy.yml  frontend-deploy.yml  labeling-pull-request.yml  rye-test.yml  slack_nortification_on_comments.yml  snap-shot-cdk.yml  unfolding-labels.yml
backend/python39/: Pipfile  app.py
backend/python39/test/tavern/helper/: hello_world_test.py
backend/python39/test/tavern/test/: test_helloworld.tavern.yml
samples/: bad_sample.py  good_sample.py
